--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,12 +59,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+     - family: Roboto
+       fonts:
+         - asset: fonts/Roboto-Black.ttf
+           weight: 900
+#         - asset: fonts/Roboto-Bold.ttf
+#         - asset: fonts/Roboto-Light.ttf
+#         - asset: fonts/Roboto-Medium.ttf
+     - family: RobotoMono
+       fonts:
+        - asset: fonts/RobotoMono-Regular.ttf
+        - asset: fonts/RobotoMono-Bold.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
