--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,18 @@ flutter:
         - asset: fonts/RobotoMono-Regular.ttf
         - asset: fonts/RobotoMono-Bold.ttf
           weight: 700
+     - family: NotoSansJP
+       fonts:
+         - asset: fonts/NotoSansJP-Black.otf
+           weight: 900
+         - asset: fonts/NotoSansJP-Bold.otf
+           weight: 700
+         - asset: fonts/NotoSansJP-Light.otf
+           weight: 300
+         - asset: fonts/NotoSansJP-Medium.otf
+           weight: 500
+         - asset: fonts/NotoSansJP-Regular.otf
+           weight: 400
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
