--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   english_words: ^3.1.0
   http: ^0.12.0+4
+  audioplayers: ^0.15.0
 
 dev_dependencies:
   flutter_test:
