--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   english_words: ^3.1.0
   http: ^0.12.0+4
   audioplayers: ^0.15.0
+  provider: ^4.0.4
 
 dev_dependencies:
   flutter_test:
